--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "msk_api",
-  "version": "0.0.1",
-  "description": "ms.k backend api",
-  "main": "src/server/server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server/server.js"
-  },
-  "author": "Igor Busquets",
-  "license": "MIT",
-  "dependencies": {
-    "auth0-api-jwt-rsa-validation": "0.0.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "express-jwt": "^5.3.1",
-    "jwks-rsa": "^1.2.1",
-    "mongoose": "^5.1.2"
-  }
+    "name": "msk_api",
+    "version": "0.0.1",
+    "description": "ms.k backend api",
+    "main": "src/server/server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node src/server/server.js"
+    },
+    "author": "Igor Busquets",
+    "license": "MIT",
+    "dependencies": {
+        "body-parser": "^1.18.3",
+        "express": "^4.16.3",
+        "express-jwt": "^5.3.1",
+        "express-jwt-authz": "^1.0.0",
+        "jwks-rsa": "^1.2.1",
+        "mongoose": "^5.1.2"
+    }
 }
