--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express": "^4.16.3",
         "express-jwt": "^5.3.1",
         "express-jwt-authz": "^1.0.0",
+        "helmet": "^3.12.1",
         "jwks-rsa": "^1.2.1",
         "mongoose": "^5.1.2"
     }
