--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/server/server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node src/server/server.js"
+        "start": "pm2 start src/server/msk_server.js"
     },
     "author": "Igor Busquets",
     "license": "MIT",
@@ -16,6 +16,7 @@
         "express-jwt-authz": "^1.0.0",
         "helmet": "^3.12.1",
         "jwks-rsa": "^1.2.1",
+        "log4js": "^2.7.0",
         "mongoose": "^5.1.2"
     }
 }
